--- a/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
@@ -4,35 +4,63 @@
     [style.background-color]="isCautionColorResult(eventsArray, i)"
   >
     @if (getEventNumber(eventsArray, i); as num) {
-      <div class="event-short-view"><label>#{{ num }}</label></div>
+      <div class="event-short-view">#{{ num }}</div>
     }
     @if (getEventTeam(eventsArray, i); as team) {
       <div
         class="event-short-view"
-        [style.background-color]="team.team_color ? hexToRgba(team.team_color, 0.3) : 'transparent'"
-      >{{ team.title | titlecase }}&nbsp;
+        [style.background-color]="
+          team.team_color ? hexToRgba(team.team_color, 0.3) : 'transparent'
+        "
+      >
+        {{ team.title | titlecase }}&nbsp;
       </div>
     }
-    @if (getBallOn(eventsArray, i) !== null && getBallOn(eventsArray, i) !== undefined) {
-      <div class="event-short-view"
-           [style.background-color]='isMinCautionColor(!isPrevBallMovedEqualCurrentBallOn(eventsArray, i))'>
+    @if (
+      getBallOn(eventsArray, i) !== null &&
+      getBallOn(eventsArray, i) !== undefined
+    ) {
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(!isPrevBallMovedEqualCurrentBallOn(eventsArray, i))
+        "
+      >
         BallOn: {{ getBallOn(eventsArray, i) }}&nbsp;
       </div>
     } @else {
-      <div class="event-short-view" [style.background-color]='isMaxCautionColor(noBallOnIsSelected(eventsArray, i))'>
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMaxCautionColor(noBallOnIsSelected(eventsArray, i))
+        "
+      >
         No BallOn
       </div>
     }
 
     @if (isBallMovePossible(eventsArray, i)) {
-      @if (getBallMovedOn(eventsArray, i) !== null && getBallMovedOn(eventsArray, i) !== undefined) {
-        <div class="event-short-view"
-             [style.background-color]='isMinCautionColor(!isNextBallOnEqualCurrentBallMoved(eventsArray, i))'>
+      @if (
+        getBallMovedOn(eventsArray, i) !== null &&
+        getBallMovedOn(eventsArray, i) !== undefined
+      ) {
+        <div
+          class="event-short-view"
+          [style.background-color]="
+            isMinCautionColor(
+              !isNextBallOnEqualCurrentBallMoved(eventsArray, i)
+            )
+          "
+        >
           BallMovedOn: {{ getBallMovedOn(eventsArray, i) }}&nbsp;
         </div>
       } @else {
-        <div class="event-short-view"
-             [style.background-color]='isMinCautionColor(noBallMovedIsSelected(eventsArray, i))'>
+        <div
+          class="event-short-view"
+          [style.background-color]="
+            isMinCautionColor(noBallMovedIsSelected(eventsArray, i))
+          "
+        >
           No BallMovedOn
         </div>
       }
@@ -42,7 +70,14 @@
       @if (getBallOn(eventsArray, i); as ballOn) {
         @if (maxFieldLength) {
           <div class="event-short-view">
-            Dist: {{ computeDistance(getBallMovedOn(eventsArray, i), ballOn, maxFieldLength / 2) }}&nbsp;
+            Dist:
+            {{
+              computeDistance(
+                getBallMovedOn(eventsArray, i),
+                ballOn,
+                maxFieldLength / 2
+              )
+            }}&nbsp;
           </div>
         }
       }
@@ -50,20 +85,38 @@
 
     @if (isReturnPlayOrKickOut(eventsArray, i)) {
       @if (maxFieldLength) {
-        @if (getEventBallKickedTo(eventsArray, i) !== null && getEventBallKickedTo(eventsArray, i) !== undefined) {
-          @if (getEventBallReturnedTo(eventsArray, i) !== null && getEventBallReturnedTo(eventsArray, i) !== undefined) {
-
-
+        @if (
+          getEventBallKickedTo(eventsArray, i) !== null &&
+          getEventBallKickedTo(eventsArray, i) !== undefined
+        ) {
+          @if (
+            getEventBallReturnedTo(eventsArray, i) !== null &&
+            getEventBallReturnedTo(eventsArray, i) !== undefined
+          ) {
             <div class="event-short-view">
-              Return
-              Dist: {{ computeDistanceOnReturn(getEventBallReturnedTo(eventsArray, i), getEventBallKickedTo(eventsArray, i), maxFieldLength / 2) }}&nbsp;
+              Return Dist:
+              {{
+                computeDistanceOnReturn(
+                  getEventBallReturnedTo(eventsArray, i),
+                  getEventBallKickedTo(eventsArray, i),
+                  maxFieldLength / 2
+                )
+              }}&nbsp;
             </div>
           } @else {
-            <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">NO RETURNED BALL
+            <div
+              class="event-short-view"
+              [style]="{ 'background-color': ICautionColors.MinCaution }"
+            >
+              NO RETURNED BALL
             </div>
           }
         } @else {
-          <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">NO KICKED BALL
+          <div
+            class="event-short-view"
+            [style]="{ 'background-color': ICautionColors.MinCaution }"
+          >
+            NO KICKED BALL
           </div>
         }
       }
@@ -71,44 +124,82 @@
 
     @if (isInterceptionOrFumble(eventsArray, i)) {
       @if (maxFieldLength) {
-        @if (getEventBallPickedOn(eventsArray, i) !== null && getEventBallPickedOn(eventsArray, i) !== undefined) {
-          @if (getEventBallReturnedTo(eventsArray, i) !== null && getEventBallReturnedTo(eventsArray, i) !== undefined) {
-
-
+        @if (
+          getEventBallPickedOn(eventsArray, i) !== null &&
+          getEventBallPickedOn(eventsArray, i) !== undefined
+        ) {
+          @if (
+            getEventBallReturnedTo(eventsArray, i) !== null &&
+            getEventBallReturnedTo(eventsArray, i) !== undefined
+          ) {
             <div class="event-short-view">
-              Return
-              Dist: {{ computeDistanceOnReturn(getEventBallReturnedTo(eventsArray, i), getEventBallPickedOn(eventsArray, i), maxFieldLength / 2) }}&nbsp;
+              Return Dist:
+              {{
+                computeDistanceOnReturn(
+                  getEventBallReturnedTo(eventsArray, i),
+                  getEventBallPickedOn(eventsArray, i),
+                  maxFieldLength / 2
+                )
+              }}&nbsp;
             </div>
           } @else {
-            <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">NO RETURNED BALL
+            <div
+              class="event-short-view"
+              [style]="{ 'background-color': ICautionColors.MinCaution }"
+            >
+              NO RETURNED BALL
             </div>
           }
         } @else {
-          <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">NO PICKED BALL
+          <div
+            class="event-short-view"
+            [style]="{ 'background-color': ICautionColors.MinCaution }"
+          >
+            NO PICKED BALL
           </div>
         }
       }
     }
 
     @if (isQbPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noQbSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noQbSelected(eventsArray, i))
+        "
+      >
         QB: {{ isPlayer(getEventQb(eventsArray, i)) }}
       </div>
     }
     @if (getEventDown(eventsArray, i); as down) {
       @if (getEventDistance(eventsArray, i); as dist) {
-        <div
-          class="event-short-view">{{ down }}&nbsp;&&nbsp;{{ isDistanceOrGoal(dist, getBallOn(eventsArray, i), getEventPlayType(eventsArray, i)) }}
+        <div class="event-short-view">
+          {{ down }}&nbsp;&&nbsp;{{
+            isDistanceOrGoal(
+              dist,
+              getBallOn(eventsArray, i),
+              getEventPlayType(eventsArray, i)
+            )
+          }}
         </div>
       } @else {
         @if (isDownDistancePlay(eventsArray, i)) {
-          <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">No Distance</div>
+          <div
+            class="event-short-view"
+            [style]="{ 'background-color': ICautionColors.MinCaution }"
+          >
+            No Distance
+          </div>
         }
       }
     } @else {
       @if (isDownDistancePlay(eventsArray, i)) {
-        <div class="event-short-view" [style]="{ 'background-color': ICautionColors.MinCaution}">No Down</div>
+        <div
+          class="event-short-view"
+          [style]="{ 'background-color': ICautionColors.MinCaution }"
+        >
+          No Down
+        </div>
       }
     }
     @if (getEventPlayType(eventsArray, i); as playType) {
@@ -117,56 +208,88 @@
     @if (getEventPlayResult(eventsArray, i); as playResult) {
       <div
         class="event-short-view"
-        [style]="{ 'background-color': getPlayTypeBackgroundColor(playResult)}"
+        [style]="{ 'background-color': getPlayTypeBackgroundColor(playResult) }"
       >
         {{ playResult | titlecase }}&nbsp;
       </div>
     }
     @if (isRunPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noRunPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noRunPlayerSelected(eventsArray, i))
+        "
+      >
         RUNNER: {{ isPlayer(getEventRunPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isPassCompletedPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noReceiverPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noReceiverPlayerSelected(eventsArray, i))
+        "
+      >
         RECEIVER: {{ isPlayer(getEventReceiverPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isPassDroppedPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noReceiverPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noReceiverPlayerSelected(eventsArray, i))
+        "
+      >
         DROPPED PLAYER: {{ isPlayer(getEventDroppedPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isScoreTDPatTwoOffence(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noScorePlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noScorePlayerSelected(eventsArray, i))
+        "
+      >
         SCORE PLAYER: {{ isPlayer(getEventScorePlayer(eventsArray, i)) }}
       </div>
     }
     @if (isPatOnePlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noPatOnePlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noPatOnePlayerSelected(eventsArray, i))
+        "
+      >
         PAT ONE PLAYER: {{ isPlayer(getEventPatOnePlayer(eventsArray, i)) }}
       </div>
     }
     @if (isReturnPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noReturnPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noReturnPlayerSelected(eventsArray, i))
+        "
+      >
         RETURNER: {{ isPlayer(getEventReturnPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isPuntPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noPuntPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noPuntPlayerSelected(eventsArray, i))
+        "
+      >
         PUNTER: {{ isPlayer(getEventPuntPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isFlagResult(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noFlagPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noFlagPlayerSelected(eventsArray, i))
+        "
+      >
         FLAGGED: {{ isPlayer(getEventFlaggedPlayer(eventsArray, i)) }}
       </div>
     }
@@ -181,52 +304,77 @@
     <!--                      </div>-->
     <!--                    }-->
     @if (isSackResult(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noSackPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noSackPlayerSelected(eventsArray, i))
+        "
+      >
         SACK PLAYER: {{ isPlayer(getEventSackPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isInterceptResult(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noInterceptedPlayerSelected(eventsArray, i))">
-        INTERCEPT PLAYER: {{ isPlayer(getEventInterceptedPlayer(eventsArray, i)) }}
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noInterceptedPlayerSelected(eventsArray, i))
+        "
+      >
+        INTERCEPT PLAYER:
+        {{ isPlayer(getEventInterceptedPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isDeflectResult(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noDeflectPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noDeflectPlayerSelected(eventsArray, i))
+        "
+      >
         DEFLECT PLAYER: {{ isPlayer(getEventDeflectedPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isKickPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noKickPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noKickPlayerSelected(eventsArray, i))
+        "
+      >
         KICKER: {{ isPlayer(getEventKickPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isKickOffPlay(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noKickOffPlayerSelected(eventsArray, i))">
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noKickOffPlayerSelected(eventsArray, i))
+        "
+      >
         KICKOFF PLAYER: {{ isPlayer(getEventKickOffPlayer(eventsArray, i)) }}
       </div>
     }
     @if (isDefenceScore(eventsArray, i)) {
-      <div class="event-short-view"
-           [style.background-color]="isMinCautionColor(noDefenceScorePlayerSelected(eventsArray, i))">
-        DEFENCE SCORE PLAYER: {{ isPlayer(getEventDefenceScorePlayer(eventsArray, i)) }}
+      <div
+        class="event-short-view"
+        [style.background-color]="
+          isMinCautionColor(noDefenceScorePlayerSelected(eventsArray, i))
+        "
+      >
+        DEFENCE SCORE PLAYER:
+        {{ isPlayer(getEventDefenceScorePlayer(eventsArray, i)) }}
       </div>
     }
     @if (getEventIsFumble(eventsArray, i); as isFumble) {
       <div
         class="event-short-view"
-        [style]="{ 'background-color': isFumble ? '#ee88d2' : 'transparent' }">
-        {{ 'Fumble' | uppercase }}&nbsp;
+        [style]="{ 'background-color': isFumble ? '#ee88d2' : 'transparent' }"
+      >
+        {{ "Fumble" | uppercase }}&nbsp;
       </div>
     }
     @if (getEventScoreResult(eventsArray, i); as scoreResult) {
-      <div
-        class="event-short-view"
-        [style]="{ 'background-color': '#e08383' }">
+      <div class="event-short-view" [style]="{ 'background-color': '#e08383' }">
         {{ scoreResult | uppercase }}&nbsp;
       </div>
     }
