--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -3,31 +3,38 @@
   [formGroup]="playerForm"
   [tuiTextfieldLabelOutside]="true"
   style="padding: 10px"
-  >
+>
   @if (
     players &&
     players.length &&
     playerForm &&
     playersArray &&
     playersArray.length
-    ) {
+  ) {
     <div class="table">
       @if (players && players.length) {
         <div formArrayName="players" class="table-body">
-          @for (playerFormGroup of playersArray.controls; track playerFormGroup; let i = $index) {
-            <div
-              class="table-row"
-              [formGroupName]="i"
-              >
+          @for (
+            playerFormGroup of playersArray.controls;
+            track playerFormGroup;
+            let i = $index
+          ) {
+            <div class="table-row" [formGroupName]="i">
               <div
                 class="table-cell first"
-                (click)="toggle(playerFormGroup.get('playerInTeamId' + i)!.value)"
-                >
+                (click)="
+                  toggle(playerFormGroup.get('playerInTeamId' + i)!.value)
+                "
+                (keyup.enter)="
+                  toggle(playerFormGroup.get('playerInTeamId' + i)!.value)
+                "
+                tabindex="0"
+              >
                 @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) {
                   @if (
                     getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
                     as name
-                    ) {
+                  ) {
                     {{ name | titlecase }}
                   }
                 } @else {
@@ -35,27 +42,27 @@
                     <app-select-player-to-team-tournament
                       [playerList]="availablePlayersInSport"
                       [tournamentId]="tournamentId"
-                    [control]="
-                      getFormControl(
-                        this.playerForm,
-                        i,
-                        'playerInSport',
-                        'players'
-                      )
-                    "
+                      [control]="
+                        getFormControl(
+                          this.playerForm,
+                          i,
+                          'playerInSport',
+                          'players'
+                        )
+                      "
                     ></app-select-player-to-team-tournament>
                   } @else {
                     <app-select-player-to-team-tournament
                       [playerListFromTournament]="availablePlayersInTournament"
                       [tournamentId]="tournamentId"
-                    [control]="
-                      getFormControl(
-                        this.playerForm,
-                        i,
-                        'playerInSport',
-                        'players'
-                      )
-                    "
+                      [control]="
+                        getFormControl(
+                          this.playerForm,
+                          i,
+                          'playerInSport',
+                          'players'
+                        )
+                      "
                       (playerSelect)="onPlayerSelect($event, i)"
                     ></app-select-player-to-team-tournament>
                   }
@@ -65,27 +72,29 @@
                 <div class="table-cell left">
                   @if (isRowEnabled(i)) {
                     <app-select-player-number
-                    [control]="
-                      getFormControl(this.playerForm, i, 'number', 'players')
-                    "
+                      [control]="
+                        getFormControl(this.playerForm, i, 'number', 'players')
+                      "
                     ></app-select-player-number>
                   } @else {
-                    #{{ getFormDataByIndexAndKey(playerFormGroup, i, "number") }}
+                    #{{
+                      getFormDataByIndexAndKey(playerFormGroup, i, "number")
+                    }}
                   }
                 </div>
               } @else {
                 <div class="table-cell left">
                   @if (isRowEnabled(i)) {
                     <app-select-team
-                    [control]="
-                      getFormControl(this.playerForm, i, 'team', 'players')
-                    "
+                      [control]="
+                        getFormControl(this.playerForm, i, 'team', 'players')
+                      "
                       [teamsList]="teamsInTournament"
                     ></app-select-team>
                   } @else {
                     {{
-                    getFormDataByIndexAndKey(playerFormGroup, i, "team")?.title
-                    | titlecase
+                      getFormDataByIndexAndKey(playerFormGroup, i, "team")
+                        ?.title | titlecase
                     }}
                   }
                 </div>
@@ -98,19 +107,19 @@
                         [positionList]="positions"
                         [index]="i"
                         [sportId]="sportId"
-                      [control]="
-                        getFormControl(
-                          this.playerForm,
-                          i,
-                          'position',
-                          'players'
-                        )
-                      "
+                        [control]="
+                          getFormControl(
+                            this.playerForm,
+                            i,
+                            'position',
+                            'players'
+                          )
+                        "
                       ></app-select-player-position>
                     } @else {
                       {{
-                      getFormDataByIndexAndKey(playerFormGroup, i, "position")
-                      ?.title | uppercase
+                        getFormDataByIndexAndKey(playerFormGroup, i, "position")
+                          ?.title | uppercase
                       }}
                     }
                   }
@@ -124,7 +133,7 @@
                         @if (
                           playerFormGroup.get("photoUrl" + i)!.value;
                           as photoUrl
-                          ) {
+                        ) {
                           <tui-avatar
                             [src]="backendUrl + photoUrl"
                             size="xxl"
@@ -137,103 +146,106 @@
                           <span>{{ dob | date }}</span>
                           <span
                             >Age:
-                            {{ calculateAge(dob) | number: "1.0-0" }} years</span
-                            >
-                          }
-                          @if (deleteOrUpdate === "deleteFromTeam") {
-                            <app-actions-buttons
-                              [id]="id"
-                              [index]="i"
-                              [deleteOrUpdate]="'deleteFromTeam'"
-                          [item]="
-                            getFormDataByIndexAndKey(
-                              playerFormGroup,
-                              i,
-                              'fullName'
-                            ) | uppercase
-                          "
-                              [isEnabled]="isRowEnabled(i)"
-                              [isDataChanged]="isDataChanged(i)"
-                              (onEdit)="enableRowToEdit($event.index)"
-                          (onSubmit)="
-                            onSubmit($event.action, $event.index, $event.id)
-                          "
-                              (onCancel)="onCancelButtonClick()"
-                          (onDeleteUpdate)="
-                            onSubmit($event.action, $event.index, $event.id)
-                          "
-                          (onDeleteDialog)="
-                            onDeleteButtonClick(
-                              'deleteDialogPlayer' + $event.id!
-                            )
-                          "
-                            ></app-actions-buttons>
-                          } @else {
-                            <app-actions-buttons
-                              [id]="id"
-                              [index]="i"
-                              [deleteOrUpdate]="'delete'"
-                          [item]="
-                            getFormDataByIndexAndKey(
-                              playerFormGroup,
-                              i,
-                              'fullName'
-                            ) | uppercase
-                          "
-                              [isEnabled]="isRowEnabled(i)"
-                              [isDataChanged]="isDataChanged(i)"
-                              (onEdit)="enableRowToEdit($event.index)"
-                              (onDelete)="onDelete($event.id!)"
-                          (onSubmit)="
-                            onSubmit($event.action, $event.index, $event.id)
-                          "
-                              (onCancel)="onCancelButtonClick()"
-                          (onDeleteDialog)="
-                            onDeleteButtonClick(
-                              'deleteDialogPlayer' + $event.id!
-                            )
-                          "
-                            ></app-actions-buttons>
-                          }
-                        </div>
+                            {{
+                              calculateAge(dob) | number: "1.0-0"
+                            }}
+                            years</span
+                          >
+                        }
+                        @if (deleteOrUpdate === "deleteFromTeam") {
+                          <app-actions-buttons
+                            [id]="id"
+                            [index]="i"
+                            [deleteOrUpdate]="'deleteFromTeam'"
+                            [item]="
+                              getFormDataByIndexAndKey(
+                                playerFormGroup,
+                                i,
+                                'fullName'
+                              ) | uppercase
+                            "
+                            [isEnabled]="isRowEnabled(i)"
+                            [isDataChanged]="isDataChanged(i)"
+                            (onEdit)="enableRowToEdit($event.index)"
+                            (onSubmit)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onCancel)="onCancelButtonClick()"
+                            (onDeleteUpdate)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onDeleteDialog)="
+                              onDeleteButtonClick(
+                                'deleteDialogPlayer' + $event.id!
+                              )
+                            "
+                          ></app-actions-buttons>
+                        } @else {
+                          <app-actions-buttons
+                            [id]="id"
+                            [index]="i"
+                            [deleteOrUpdate]="'delete'"
+                            [item]="
+                              getFormDataByIndexAndKey(
+                                playerFormGroup,
+                                i,
+                                'fullName'
+                              ) | uppercase
+                            "
+                            [isEnabled]="isRowEnabled(i)"
+                            [isDataChanged]="isDataChanged(i)"
+                            (onEdit)="enableRowToEdit($event.index)"
+                            (onDelete)="onDelete($event.id!)"
+                            (onSubmit)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onCancel)="onCancelButtonClick()"
+                            (onDeleteDialog)="
+                              onDeleteButtonClick(
+                                'deleteDialogPlayer' + $event.id!
+                              )
+                            "
+                          ></app-actions-buttons>
+                        }
                       </div>
-                    </ng-template>
-                  </tui-expand>
-                } @else {
-                  <app-actions-buttons
-                    [index]="i"
-                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                    (onCancel)="onCancelButtonClick()"
-                  ></app-actions-buttons>
-                }
-              </div>
-            }
-          </div>
-          @if (
-            !players.length ||
-            players[players.length - 1].playerInTeamTournament.id !== null
-            ) {
-            <div class="table-row final">
-              <app-add-button-on-final-tr
-                [action]="'add player'"
-                (onAdd)="addNewPlayer()"
-              ></app-add-button-on-final-tr>
+                    </div>
+                  </ng-template>
+                </tui-expand>
+              } @else {
+                <app-actions-buttons
+                  [index]="i"
+                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                  (onCancel)="onCancelButtonClick()"
+                ></app-actions-buttons>
+              }
             </div>
           }
-        } @else {
+        </div>
+        @if (
+          !players.length ||
+          players[players.length - 1].playerInTeamTournament.id !== null
+        ) {
           <div class="table-row final">
             <app-add-button-on-final-tr
+              [action]="'add player'"
               (onAdd)="addNewPlayer()"
             ></app-add-button-on-final-tr>
           </div>
         }
-      </div>
-    } @else {
-      No Players
-      <div class="table-row final">
-        <app-add-button-on-final-tr
-          (onAdd)="addNewPlayer()"
-        ></app-add-button-on-final-tr>
-      </div>
-    }
-  </form>
+      } @else {
+        <div class="table-row final">
+          <app-add-button-on-final-tr
+            (onAdd)="addNewPlayer()"
+          ></app-add-button-on-final-tr>
+        </div>
+      }
+    </div>
+  } @else {
+    No Players
+    <div class="table-row final">
+      <app-add-button-on-final-tr
+        (onAdd)="addNewPlayer()"
+      ></app-add-button-on-final-tr>
+    </div>
+  }
+</form>
